data-table up to date and hidden until see more button is click.  Event page is generated upon see details on event cards..time is removed from data table. event search array added to hold search result informaion in order to generate event page..event id key added and grep methon in order to find event by key on click event..at the moment when a user clicks see details on event card two divs toggle between show and hide..that may change..data table display fixed..still working on bug with text alignment as user toggles from one page to another.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -69,6 +69,15 @@ h1 {
   height: 100%;
   position: relative;
 }
+.item2 {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  font-size: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .item-1 {
 grid-column: 1 / span 1;
@@ -100,6 +109,51 @@ grid-column: 3 / span 1;
 grid-row: 2 / span 1;
 }
 
+.item-7 {
+  grid-column: 1 / span 2;
+  grid-row: 1 / span 1;
+  border: solid red 1px;
+  text-align: center;
+  padding: 1rem 2rem;
+  }
+  
+  .item-8 {
+  grid-column: 1 / span 1;
+  grid-row: 2 / span 1;
+  border: solid red 1px;
+  background-image: url("../images/mic.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  }
+  
+  .item-9 {
+  grid-column: 2 / span 1;
+  grid-row: 2 / span 1;
+  border: solid red 1px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  }
+  
+  .item-10 {
+  grid-column: 1 / span 2;
+  grid-row: 3 / span 1;
+  border: solid red 1px;
+  }
+  
+  .item-11 {
+  grid-column: 1 / span 2;
+  grid-row: 4 / span 1;
+  border: solid red 1px;
+  }
+
+  #mic-pic {
+    height: 100%;
+    width: 100%;
+  }
+
+
+
 
 .grid-container {
     display: grid;
@@ -109,9 +163,16 @@ grid-row: 2 / span 1;
     grid-row-gap: 2.5rem;
     height: 100%;
     width:80%;
-    margin: 3rem auto;
-    
+    margin: 3rem auto;  
+}
 
+#grid-container2 {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: auto auto auto auto;
+  height: 80vh;
+  width:80%;
+  margin: 3rem auto;
 }
 
 .card {
@@ -134,6 +195,11 @@ grid-row: 2 / span 1;
 .search-card-input {
   color: orange;
   
+}
+
+#data-image {
+  width: 150px;
+  height: 150px;
 }
 /* --------------------------------------------------------SIGN UP MODAL--------------------------------------------------------- */
 .form-dark .font-small {
@@ -210,4 +276,39 @@ grid-row: 2 / span 1;
     margin: auto;
     position: relative;
     bottom: 6rem;
+  }
+
+  #event-table-div {
+    margin: 1rem auto;
+    max-width: 80vw;
+    display: none;
+  }
+
+  #event-table {
+    min-width: 80vw;
+    margin: auto;
+  }
+
+  #main-container {
+    /* display: none; */
+  }
+
+  #event-page-main-container {
+    display: none;
+  }
+
+  .table-col {
+    width: 80vh;
+    text-align: center;
+  }
+  
+  .row {
+    min-width: 80vw;
+    margin: auto;
+    justify-content: center;
+  }
+
+  #event-table_filter {
+    display: flex;
+    justify-content: flex-end;
   }
